@@ -834,6 +834,13 @@ endif (UNIX AND NOT APPLE)
 
 configure_file(config.h.cmake ${CMAKE_BINARY_DIR}/config.h)
 
+if (NOT WIN32 AND NOT APPLE AND NOT ENABLE_UBUNTU)
+    # uninstall target
+    configure_file("${CMAKE_SOURCE_DIR}/cmake_uninstall.cmake.in" "${CMAKE_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
+    configure_file(install_dirs.cmake ${CMAKE_BINARY_DIR}/install_dirs)
+    add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/cmake_uninstall.cmake)
+endif (NOT WIN32 AND NOT APPLE AND NOT ENABLE_UBUNTU)
+
 if (ENABLE_KDE)
     message("-- Building KDE version")
 elseif (ENABLE_UBUNTU)
