@@ -69,6 +69,7 @@
     whether we can connect.
 49. Save scaled covers as PNG, as the quality is much better.
 50. Use Humanity/gnome icons for Windows and Mac builds.
+51. Add a uninstall target for Linux builds.
 
 1.5.2
 -----
